--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,16 @@ h1{
 	 position: absolute;
 	 top:0px;
 	 left:0px;		
-	 padding: 45px;
+	 padding: 40px;
 	 width: 15%;
  }
+
+ @media only screen and (max-width: 500px) {
+	.logo-medo{
+		position: absolute;
+		top:70px;
+		left:0px;		
+		padding: 20px;
+		width: 50%;
+	}
+  }
