--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @CHARSET "ISO-8859-1";
 
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond|Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Palanquin+Dark|Roboto&display=swap');
 
 /* Reset CSS
  * --------------------------------------- */
@@ -52,7 +52,6 @@ abbr,acronym { border: 0;
  * --------------------------------------- */
 body{
 	font-family: arial,helvetica;
-	color: #333;
 	color: rgba(0,0,0,0.5);
 }
 .wrap{
@@ -62,17 +61,43 @@ body{
 	position: relative;
 }
 h1{
+	color: white;
+	font-size: 4.35rem;
+    letter-spacing: -1px;
+    font-weight: 600;
+    font-family: 'Palanquin Dark', sans-serif;
+    text-align: left;
+    position: absolute;
+    top: 240px;
+    left: 66px;
+    z-index: 2;
+}
+h2{
+	color: #333;
+	font-size: 1.7rem;
+    letter-spacing: -1px;
+    font-family: 'Roboto', sans-serif;
+    text-align: left;
+    position: absolute;
+    top: 357px;
+    left: 70px;
+	z-index: 2;	
+}
+h3{
+	color: whitesmoke;
 	font-size: 5em;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Palanquin Dark', sans-serif;
     text-align: left;
     position: absolute;
     top: 240px;
 	left: 70px;
 	z-index: 2;
+	
 }
-h2{
+h4{
+	color: whitesmoke;
 	font-size: 2.5rem;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Roboto', sans-serif;
     text-align: left;
     position: absolute;
     top: 365px;
@@ -110,19 +135,19 @@ h2{
 	 background-image: url(../img/alpi9.jpg);
  }
  .logo-medo{
-	 position: absolute;
-	 top:0px;
-	 left:0px;		
-	 padding: 40px;
-	 width: 15%;
-	 z-index: 4;
+	position: absolute;
+    top: 0px;
+    left: 28px;
+    padding: 40px;
+    width: 10%;
+    z-index: 4;
  }
  .celular{
 	position: absolute;
     bottom: 0px;
-    right: 250px;
-	width: 45%;
-	z-index: 3;
+    right: 200px;
+    width: 50%;
+    z-index: 3;
  }
  .fondo-muebles{
 	position: absolute;
@@ -131,21 +156,28 @@ h2{
     width: 45%;
     z-index: 1;
  }
+ .bosque{
+	position: absolute;
+    bottom: 0px;
+    right: -55px;
+    width: 105%;
+    z-index: 1;
+ }
 
  @media only screen and (max-width: 500px) {
 	.logo-medo{
 		position: absolute;
 		top: 5px;
 		left: 0px;
-		padding: 20px;
-		width: 40%;
+		padding: 34px;
+		width: 26%;
 		z-index: 4;
 	}
 	.celular{
 		position: absolute;
 		bottom: 0px;
-		right: -20px;
-		width: 109%;
+		right: -60px;
+		width: 140%;
 		z-index: 3;
 	}
 	.fondo-muebles{
@@ -155,18 +187,45 @@ h2{
 		width: 110%;
 		z-index: 1;
 	 }
+	 .bosque{
+		position: absolute;
+		bottom: 0px;
+		right: -55px;
+		width: 105%;
+		z-index: 1;
+	 }
 	h1{
 		font-size: 2.25rem;
-		font-family: 'Oswald', sans-serif;
+		font-family: 'Palanquin Dark', sans-serif;
+		position: relative;
+		top: 95px;
+		left: 0px;
+		z-index: 2;
+		padding-left: 35px;
+		line-height: 40px;
+	}
+	h2{
+		font-size: 1rem;
+		font-family: 'Roboto', sans-serif;
+		position: relative;
+		top: 110px;
+		left: 35px;
+		z-index: 2;
+	}
+	h3{
+		color: whitesmoke;
+		font-size: 2.25rem;
+		font-family: 'Palanquin Dark', sans-serif;
 		text-align: center;
 		position: relative;
 		top: 130px;
 		left: 0px;
 		z-index: 2;
 	}
-	h2{
+	h4{
+		color: whitesmoke;
 		font-size: 1.35rem;
-		font-family: 'EB Garamond', serif;
+		font-family: 'Roboto', sans-serif;
 		text-align: center;
 		position: relative;
 		top: 130px;
