--- a/css/style.css
+++ b/css/style.css
@@ -176,8 +176,8 @@ h4{
 	.celular{
 		position: absolute;
 		bottom: 0px;
-		right: -70px;
-		width: 140%;
+		right: -50px;
+		width: 130%;
 		z-index: 3;
 	}
 	.fondo-muebles{
@@ -195,21 +195,22 @@ h4{
 		z-index: 1;
 	 }
 	h1{
-		font-size: 2.75rem;
+		font-size: 2.5rem;
 		font-family: 'Palanquin Dark', sans-serif;
 		position: relative;
-		top: 130px;
+		top: 70px;
 		left: 0px;
 		z-index: 2;
-		padding-left: 35px;
-		line-height: 40px;
+		padding: 35px;
+		line-height: 37px;
 	}
 	h2{
-		font-size: 1.25rem;
+		font-size: 1rem;
 		font-family: 'Roboto', sans-serif;
 		position: relative;
-		top: 150px;
-		left: 35px;
+		top: 20px;
+		padding: 35px;
+		left: 0px;
 		z-index: 2;
 	}
 	h3{
