--- a/css/style.css
+++ b/css/style.css
@@ -84,25 +84,28 @@ h2{
 	z-index: 2;	
 }
 h3{
-	color: whitesmoke;
-	font-size: 5em;
+	color: white;
+	font-size: 4.35rem;
+    letter-spacing: -1px;
+    font-weight: 600;
     font-family: 'Palanquin Dark', sans-serif;
     text-align: left;
     position: absolute;
     top: 240px;
-	left: 70px;
-	z-index: 2;
+    left: 66px;
+    z-index: 2;
 	
 }
 h4{
-	color: whitesmoke;
-	font-size: 2.5rem;
+	color: lightgrey;
+	font-size: 1.7rem;
+    letter-spacing: -1px;
     font-family: 'Roboto', sans-serif;
     text-align: left;
     position: absolute;
-    top: 365px;
-	left: 70px;
-	z-index: 2;
+    top: 357px;
+    left: 70px;
+	z-index: 2;	
 }
 
  .section{
@@ -169,7 +172,7 @@ h4{
 		position: absolute;
 		top: 5px;
 		left: 0px;
-		padding: 35px;
+		padding: 40px;
 		width: 30%;
 		z-index: 4;
 	}
@@ -201,7 +204,7 @@ h4{
 		top: 70px;
 		left: 0px;
 		z-index: 2;
-		padding: 35px;
+		padding: 40px;
 		line-height: 37px;
 	}
 	h2{
@@ -209,27 +212,26 @@ h4{
 		font-family: 'Roboto', sans-serif;
 		position: relative;
 		top: 20px;
-		padding: 35px;
+		padding: 40px;
 		left: 0px;
 		z-index: 2;
 	}
 	h3{
-		color: whitesmoke;
-		font-size: 2.25rem;
+		font-size: 2.5rem;
 		font-family: 'Palanquin Dark', sans-serif;
-		text-align: center;
 		position: relative;
-		top: 130px;
+		top: 70px;
 		left: 0px;
 		z-index: 2;
+		padding: 40px;
+		line-height: 37px;
 	}
 	h4{
-		color: whitesmoke;
-		font-size: 1.35rem;
+		font-size: 1rem;
 		font-family: 'Roboto', sans-serif;
-		text-align: center;
 		position: relative;
-		top: 130px;
+		top: 20px;
+		padding: 40px;
 		left: 0px;
 		z-index: 2;
 	}
