--- a/css/style.css
+++ b/css/style.css
@@ -184,11 +184,8 @@ h6{
  }
  .designer{
 	width: 65%;
-	padding-top: 160px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: auto;
-	margin-bottom: auto;
+	margin: auto;
+	margin-top: 50%;
 }
 
  @media only screen and (max-width: 500px) {
@@ -222,12 +219,9 @@ h6{
 		z-index: 1;
 	 }
 	 .designer{
-		padding-top: 125px;
 		width: 70%;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: auto;
-		margin-bottom: auto;
+		margin: auto;
+		margin-top: 50%;
 	}
 	h1{
 		font-size: 2.5rem;
