--- a/css/style.css
+++ b/css/style.css
@@ -136,12 +136,12 @@ h6{
 	 background-position: center 80%;
  }
  #section1 .fp-bg{
-	 background-image: url(../img/alpi1.jpg);
+	 background-image: url(../img/forest.jpg);
 	 background-size: cover;
 	 background-position: center 80%;
  }
  #section2 .fp-bg{
-	 background-image: url(../img/alpi9.jpg);
+	 background-image: url(../img/new-york.jpg);
 	 background-size: cover;
 	 background-position: center 80%;
  }
@@ -151,14 +151,12 @@ h6{
 	 background-position: center 80%;
  }
  #section4 .fp-bg{
-	 background-image: url(../img/alpi8.jpg);
+	 background-image: url(../img/army.png);
 	 background-size: cover;
 	 background-position: center 80%;
  }
  #section5 .fp-bg{
-	 background-image: url(../img/alpi1.jpg);
-	 background-size: cover;
-	 background-position: center 80%;
+	 background-color: antiquewhite;
  }
  #section6 .fp-bg{
 	 background-image: url(../img/alpi9.jpg);
@@ -213,12 +211,12 @@ h6{
     width: 50%;
     z-index: 3;
 }
-.city{
+.kuka{
 	position: absolute;
     bottom: 0px;
-    right: -75px;
-    width: 110%;
-    z-index: 1;
+    right: -15px;
+    width: 70%;
+    z-index: 3;
  }
 
  @media only screen and (max-width: 500px) {
@@ -270,12 +268,12 @@ h6{
 		width: 120%;
 		z-index: 3;
 	}
-	.city{ /* MEDIA */
+	.kuka{ /* MEDIA */
 		position: absolute;
 		bottom: 0px;
-		right: -140px;
-		width: 450%;
-		z-index: 1;
+		right: -50px;
+		width: 130%;
+		z-index: 3;
 	}
 	h1{ /* MEDIA */
 		font-size: 2.5rem;
