--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ form,fieldset,input,textarea,p,blockquote,th,td {
 }
 a{
 	text-decoration:none;
+	color: #8A786F;
+
+}
+a:hover{
+	color: #000000;
+	
 }
 table {
     border-spacing: 0;
@@ -195,7 +201,7 @@ h4{
 	bottom: 7.5%;
 	left: 7.5%;
 	padding-left: 12.5%;
-	z-index: 10;
+	z-index: 11;
 }
 .contact{
 	position: absolute;
@@ -233,6 +239,11 @@ h4{
 }
 
  @media only screen and (max-width: 500px) {
+	#section0 .fp-bg{
+		background-image: url(../img/tatuado-medo.jpg); 
+		background-size: cover;
+		background-position-x: 42%;
+	}
 	#section0 .linea-divisora{
 		position: absolute;
 		bottom: 10%;
@@ -256,21 +267,57 @@ h4{
 	#section1 .linea-divisora{
 		position: absolute;
 		bottom: 50%;
-		right: 50%;
+		right: 55%;
 		height: 35px;
 	}
 	#section1 .logo-medo{
 		position: absolute;
 		bottom: 50%;
 		padding: 7.5px;
-		right: 50%;
+		right: 55%;
 		height: 20px;
 	}
 	#section1 h1{
 		position: absolute;
 		bottom: 50%;
-		left: 50%;
+		left: 45%;
 		padding: 7.5px;
 		font-size: 15px;
 	}
+	.rrss{
+		display: none;
+	}
+	.footer{
+		display: none;
+	}
+	.menu{
+		display: none;
+	}
+	h2{
+		font-size: 2.75rem;
+		left: 5%;
+	}
+	h3{
+		display: none;
+	}
+	#section2 .fp-bg{
+		background-image: url(../img/hibridos.svg);
+		background-size: 60%;
+		background-position: center;	
+		background-repeat: no-repeat;
+	 }
+	 #section3 .fp-bg{
+		background-image: url(../img/app.png);
+		background-size: 30%;
+		background-position: bottom;
+		background-position-x: 75%;
+		background-repeat: no-repeat;
+	 }
+	 #section4 .fp-bg{
+		background-image: url(../img/hibrido.png);
+		background-size: 35%;
+		background-position-x: 80%;
+		background-position-y: 70%;
+		background-repeat: no-repeat;
+	 }
   }
