css bottom youget

--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ h4{
  .gif-mesinha{
 	display: none;
 	position: absolute;
-    top: 31.4%;
+	bottom: 25.6%;
     right: 31.2%;
     width: 11.6%;
  }
