--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,10 @@ h6{
 		font-size: 2.75rem;
 		left: 5%;
 	}
+	#section5 h2{
+		font-size: 2.25rem;
+		line-height: 35px;
+	 }
 	h3{
 		display: none;
 	}
@@ -366,4 +370,34 @@ h6{
 		width: 80%;
 		padding-left: 10%;
 	 }
+	 .natural{
+		width: 33%;
+		position: absolute;
+		bottom: 43%;
+		left: 10%;
+	 }
+	 .easy{
+		width: 33%;
+		position: absolute;
+		bottom: 23%;
+		left: 10%;
+	 }
+	 .cloud{
+		width: 33%;
+		position: absolute;
+		bottom: 3%;
+		left: 10%;
+	 }
+	 h5{
+		font-size: 15px;
+		width: 120%;
+		top: -100px;
+    	left: 110%;
+	}
+	h6{
+		font-size: 10px;
+		width: 120%;
+		top: -15px;
+		left: 100%;
+	}
   }
