--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ h6{
 	 text-align:center;
  }
  #section0 .fp-bg{
+	 display: none;
 	 background-image: url(../img/tatuado-medo.jpg); 
 	 background-size: cover;
      background-position: center 80%;
